<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout17"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techcore.appprevendastechcore.Configurar.Configurar">

    <!-- Login progress -->


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/arsenal"
        android:text="@string/texto_jan_config_terminal"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InefficientWeight"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="408dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="2dp"
        android:foregroundTint="@android:color/holo_orange_dark"
        android:textColorHint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="408dp">

        <AutoCompleteTextView
            android:id="@+id/txtCodigo"
            style="@style/Base.Theme.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/arsenal"
            android:hint="@string/prompt_filial"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="20dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="710dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:foregroundTint="@android:color/holo_orange_dark"
        android:textColorHint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:layout_conversion_absoluteHeight="51dp"
        tools:layout_conversion_absoluteWidth="20dp">

        <EditText
            android:id="@+id/txtUrlServer"
            style="@style/Base.Theme.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/arsenal"
            android:hint="@string/prompt_urlservidor"
            android:imeActionLabel="@string/action_sign_in_short"
            android:inputType="textUri"
            android:maxLines="1"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="20dp"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="63dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="408dp">

        <Button
            android:id="@+id/btnEnviar"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/holo_orange_dark"
            android:fontFamily="@font/arsenal"
            android:text="@string/action_sign_in"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnMainSair"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="185dp" />

        <Button
            android:id="@+id/btnMainSair"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/holo_orange_dark"
            android:backgroundTintMode="screen"
            android:elevation="2dp"
            android:fontFamily="@font/arsenal"
            android:text="@string/btnSairConfig"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEnviar"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="100dp" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
