<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="top|center"
    android:orientation="vertical">


    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:id="@+id/layTotalVenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:fontFamily="@font/arsenal"
            android:gravity="left"
            android:text="@string/txtTotal"
            android:textColor="#5F5C5C"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtVlrSemDesconto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0"
            android:fontFamily="@font/arsenal"
            android:gravity="right"
            android:text="R$ 0,00"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="48sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="8dp">

        <Switch
            android:id="@+id/optDesc"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/holo_orange_dark"
            android:checked="false"
            android:fontFamily="@font/arsenal"
            android:paddingStart="5dp"
            android:showText="false"
            android:text="Desconto ($)"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtDescontoVlr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtDescontoVlr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="#1D1565C0"
            android:fontFamily="@font/arsenal"
            android:gravity="right"
            android:hint="R$0,00"
            android:inputType="numberDecimal"
            android:digits="1234567890.,"
            android:paddingRight="8dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/optDesc"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#FFFFFF">

        <Button
            android:id="@+id/btnAplicar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/holo_orange_dark"
            android:fontFamily="@font/arsenal"
            android:text="@string/txtAplicar"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDesconto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDesconto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/holo_orange_dark"
            android:fontFamily="@font/arsenal"
            android:text="@string/txtCancelar"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAplicar"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
